<resources>
    <string name="app_name">Procesos Administrativos</string>
    <string name="registroduplicado">Error, registro duplicado.</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="hastapronto">Hasta pronto.</string>
    <string name="credsincorrectas">Error: las credenciales ingresadas, son incorrectas.</string>
    <string name="AppBarNameSoliExtra">Solicitud Extraordinaria</string>
    <string name="nuevaSoliExtraName">Solicitud de Evaluación Extraordinaria</string>
    <string name="idSolicitudExtraordinario">N° de Solicitud: </string>
    <string name="carnetAlumno">Carnet del Alumno: </string>
    <string name="idEvaluacion">ID de Evaluación: </string>
    <string name="tipoSolicitudExtra">Tipo de Solicitud: </string>
    <string name="motivoSolicitudExtra">Motivo: </string>
    <string name="fechaSolicitudExtra">Fecha de Solicitud: </string>
    <string name="justificacionSoliExtra">Justificación: </string>
    <string name="estadoSoliExtra">Estado: </string>
    <string name="textoJustiSoliExtra">Marque si se presenta Justificación</string>
    <string name="textoEstadoSoliExtra">Marque para aprobar la Solicitud</string>
    <string name="hintIdSoli">Correlativo</string>
    <string name="hintCarnetAlumno">DUE</string>
    <string name="hintIdEva">Código de Evaluación</string>
    <string name="hintTipoSoli">Diferido(D) o Repetido(R)</string>
    <string name="hintMotivoSoli">Razón de la Solicitud</string>
    <string name="hintFechaSoli">Fecha</string>
    <string name="idUsuario">ID</string>
    <string name="Email">Correo</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Iniciar sesión</string>
    <string name="FIA">FACULTAD DE INGENIERÍA Y ARQUITECTURA</string>
    <string name="CD">Descripcion</string>
    <string name="CVSoliImp">Solicitud</string>
    <string name="CVMaterias">Materias</string>
    <string name="btnAñadirArchivo">AÑADIR</string>
    <string name="textDocumento">DOCUMENTOS</string>
    <string name="textDetalles">DETALLES DE IMPRESIÓN</string>
    <string name="textNImpresiones">N° Impresiones: </string>
    <string name="textNAnexos">N° Hojas Anexas: </string>
    <string name="hintImpresiones">ej.:50,60,...,para más de 1 doc.</string>
    <string name="hintHojasAnexas">ej.:5,3,...,para más de 1 doc.</string>
    <string name="textOtrosDetalles">Otros Detalles: </string>
    <string name="textInformacionAdicional">INFORMACIÓN ADICIONAL</string>
    <string name="textDocDirector">Docente Director: </string>
    <string name="textEncImpres">Encargado Impresión: </string>
    <string name="textEstado">ESTADO: </string>
    <string name="textResultadosImpresion">RESULTADOS DE IMPRESIÓN</string>
    <string name="evaluacion">Evaluación</string>
    <string name="nombre_eval">Nombre de evaluación</string>
    <string name="tipo_eval">Tipo de evaluación</string>
    <string name="fechaInicio_eval">Fecha de inicio de evaluación</string>
    <string name="fechaFin_eval">Fecha de fin de evaluación</string>
    <string name="descripcion_eval">Descripción de evaluación</string>
    <string name="entregaNotas_eval">Fecha de entrega de notas</string>
    <string name="participantes_eval">Participantes de evaluación</string>
    <string name="titulo_nueva_eval">Nueva evaluación</string>
    <string name="carnet_docente_eval">Docente encargado</string>
    <string name="codigo_asignatura_eval">Asignatura</string>
    <string name="titulo_EA_editarEval">Editar evaluación</string>
    <string name="titulo_EA_nuevaEval">Añadir evaluación</string>
    <string name="titulo_ver_eval">Detalle de evaluación</string>
    <string name="inic_notif_eval">La evaluación \u0020</string>
    <string name="accion_borrar_notif_eval">\u0020 ha sido borrada con éxito.</string>
    <string name="accion_actualizar_notif_eval">\u0020 ha sido actualizada.</string>
    <string name="accion_insertar_notif_eval">\u0020 se ha insertado con éxito.</string>
    <string name="accion_correoEnviado_notif_eval">\u0020 Se ha notificado a los alumnos sobre la fecha de entrega de notas.</string>
    <string name="fecha_placeholder_eval">Sin Fecha</string>
    <string name="fecha_noenc_eval">Sin Fecha</string>
    <string name="error_form_incompleto_eval">Por favor, llena todos los campos.</string>
    <string name="añadir_estudiante_evaluacion">Añadir</string>
    <string name="headline_lista_alumnos_detalleeval">Estudiantes en la evaluación:</string>
    <string name="detalle_eval">Estudiantes en evaluación</string>
    <string name="inic_notif_detalle">El estudiante \u0020</string>
    <string name="accion_borrar_notif_Detalle">\u0020 ha sido eliminado de la evaluación.</string>
    <string name="nota_label_detalle">Nota de evaluación: </string>
    <string name="alumno_label_detalle">Detalle de evaluación de \u0020</string>
    <string name="agregarPrimeraRevisionDet">Solicitar revisión</string>
    <string name="editarPrimeraRevisionDet">Editar Primera Revision</string>
    <string name="display_nota_alumno_evaluacion">Nota del estudiante</string>
    <string name="solicitar_revision_evaluacion">Solicitar Revision</string>
    <string name="confirmacion_nota">Se ha registrado la nota con éxito.</string>
    <string name="leyenda_estadisticas">Notas de la evaluacion</string>
    <string name="estad_eval">Estadística</string>
    <string name="headline_grafico_eval">Gráfico de línea de notas</string>
    <string name="labely_eval">Cantidad</string>
    <string name="labelx_eval">Notas</string>
    <string name="mensaje_grafica_vacia">Sin evaluaciones</string>
    <string name="sinentreganota">La entrega de nota no se ha realizado aún.</string>
    <string name="notamax">Nota máxima de evaluación.</string>
    <string name="valornota">Valor de la evaluación</string>
    <string name="notamaxerror">La nota ingresada es mayor que la nota máxima permitida, por favor ingresa una nota igual o menor a \u0020</string>
    <string name="graficopastel">Gráfica de aprobación</string>
    <string name="reprobados">Reprobados</string>
    <string name="aprobados">Aprobados</string>
    <string name="solicitarrepetido">Solicitar repetido</string>
    <string name="nombre_area">Nombre de área administrativa</string>
    <string name="escuela_area_adm">Escuela del área administrativa</string>
    <string name="area_adm">Áreas administrativas</string>
    <string name="titulo_EA_editararea">Editar área administrativa</string>
    <string name="titulo_EA_nuevaarea">Añadir área administrativa</string>
    <string name="titulo_ver_area">Detalle de área administrativa</string>
    <string name="inic_notif_aarea">El área \u0020</string>
    <string name="id_segunda_revision">Identificador único de segunda revisión</string>
    <string name="fecha_segunda_revision">Fecha de segunda revisión</string>
    <string name="hora_segunda_revision">Hora de segunda revisión</string>
    <string name="nota_final_segunda_revision">Nota final de revisión</string>
    <string name="observaciones_segunda_revision">Observaciones de revisión</string>
    <string name="fecha_solicitud_Segunda_revision">Fecha de solicitud de revisión</string>
    <string name="inic_notif_segrev">La segunda revisión \u0020</string>
    <string name="titulo_EA_editarsegrev">Editar segunda revisión</string>
    <string name="titulo_EA_nuevasegrev">Añadir segunda revisión</string>
    <string name="antesmeridiano">\u0020 AM</string>
    <string name="posmeridiano">\u0020 PM</string>
    <string name="titulo_ver_segundarevision">Detalle de segunda revisión</string>
    <string name="agregar_docente_arevision">Agregar docentes a revisión</string>
    <string name="docentes_en_revision">Docentes asignados:</string>
    <string name="agregar_docentes">Asignación de docentes</string>
    <string name="eliminar_docentesmsg1">El docente \u0020</string>
    <string name="eliminar_docentesmsg2">\u0020 ha sido eliminado.</string>
    <string name="errormsg">Ha ocurrido un error ¿Llenó todos los campos?</string>
    <string name="adv_msg_rev">Ya existe una revisión para esta nota, si deseas modificar la nota hazlo desde la revisión.</string>
    <string name="noseharealizado">No se ha realizado la publicación oficial de esta nota.</string>
    <string name="sehasolicitado">Se ha solicitado revisión de esta nota.</string>
    <string name="enrevision">La nota se encuentra actualmente en revisión.</string>
    <string name="AppBarNameCargos">Cargos</string>
    <string name="IdCargo">Identificador:</string>
    <string name="IdEscuelaCargo">Área Administrativa:</string>
    <string name="NombreCargo">Nombre:</string>
    <string name="AppBarAddCargo">Agregar cargo</string>
    <string name="DetalleCargo">Detalle de cargo</string>
    <string name="EditarCargo">Editar cargo</string>
    <string name="cargoinsertado">Cargo insertado con éxito.</string>
    <string name="cargoactualizado">Cargo actualizado con éxito.</string>
    <string name="cargoeliminado">Cargo eliminado con éxito.</string>
    <string name="AppBarAddAsignatura">Agregar asignatura</string>
    <string name="CodigoAsignatura">Código: </string>
    <string name="CodDptoAsignauta">Depatamento: </string>
    <string name="NombreAsignatura">Nombre: </string>
    <string name="AppBarNameAsignaturas">Asignaturas</string>
    <string name="DetalleAsignatura">Detalle de asignatura</string>
    <string name="EditarAsignatura">Editar asignatura</string>
    <string name="asignaturainsertada">Asignatura insertada con éxito.</string>
    <string name="asignaturaeliminada">Asignatura eliminada con éxito.</string>
    <string name="asignaturaactualizada">Asignatura actualizada con éxito.</string>
    <string name="AppBarNamePrimerRevision">Primera revisión</string>
    <string name="CodigoPR">Código: </string>
    <string name="LocalPR">Local: </string>
    <string name="DetallePR">Detalle de evaluación: </string>
    <string name="fechaSolPR">Fecha de solicitud: </string>
    <string name="estadoPR">Estado: </string>
    <string name="notaActualPR">Nota actual: </string>
    <string name="notaCorregida">Nota final: </string>
    <string name="observacionesPR">Observaciones</string>
    <string name="agregarPrimera">Agregar primera revisión</string>
    <string name="AppBarNamePrimerasRevisiones">Primeras revisiones</string>
    <string name="detallePrimera">Detalle de primera revisión</string>
    <string name="EditarPrimera">Editar primera revisión</string>
    <string name="nota_place_holder_PR" translatable="false">0.0</string>
    <string name="local_placeholder_PR" translatable="false">LComp1</string>
    <string name="estado_placeholder_PR" translatable="false">true</string>
    <string name="carnet_addhint_Alumno" translatable="false">DUE</string>
    <string name="nombre_addhint_Alumno">Nombre</string>
    <string name="apellidos_addhint_Alumno">Apellidos</string>
    <string name="carrera_addhint_Alumno">Carrera</string>
    <string name="correo_addhint_Alumno">Correo</string>
    <string name="fechaDesde">Fecha de Inicio: </string>
    <string name="fechaHasta">Fecha de Finalización: </string>
    <string name="nomCiclo">Ciclo N°: </string>
    <string name="hintNumCiclo">Número de Ciclo</string>
    <string name="hintFechaIni">Inicio de Clases</string>
    <string name="hintFechaFin">Cierre del Sistema</string>
    <string name="IDLocal">Identificador: </string>
    <string name="nomLocal">Nombre del Local: </string>
    <string name="ubicacionLocal">Ubicación del Local: </string>
    <string name="latLocal">Latitud: </string>
    <string name="lonLocal">Longitud: </string>
    <string name="hintIDLocal">Identificador del Local Seleccionado.</string>
    <string name="hintNomLocal">Nombre del Local Seleccionado.</string>
    <string name="hintUbLocal">Ubicación exacta del Local Seleccionado.</string>
    <string name="hintLatLocal">Latitud del Local</string>
    <string name="hintLonLocal">Longitud del Local</string>
</resources>