<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.NuevaSolicitudExtraordinarioActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nuevaSoliExtraName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingBottom="20dp"/>
        <TableRow>
            <TextView
                android:text="@string/carnetAlumno"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <EditText
                android:id="@+id/editCarnetAlumno"
                android:inputType="text"
                android:maxLength="7"
                android:hint="@string/hintCarnetAlumno"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/idEvaluacion"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <EditText
                android:id="@+id/editIdEvaluacion"
                android:inputType="text"
                android:maxLength="8"
                android:hint="@string/hintIdEva"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tipoSolicitudExtra"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <EditText
                android:id="@+id/editTipoSoliRepetido"
                android:inputType="text"
                android:maxLength="1"
                android:hint="@string/hintTipoSoli"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/motivoSolicitudExtra"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <EditText
                android:id="@+id/editMotivoSoliRepetido"
                android:hint="@string/hintMotivoSoli"
                android:inputType="text"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/fechaSolicitudExtra"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <EditText
                android:id="@+id/editFechaSoliRepetido"
                android:inputType="date|text"
                android:hint="@string/hintFechaSoli"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/justificacionSoliExtra"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:id="@+id/JustiSoliRepe"
                android:text="@string/textoJustiSoliExtra"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:ignore="Autofill"
                android:paddingBottom="20dp"/>
        </TableRow>
    </TableLayout>
</ScrollView>