<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VerLocalActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:padding="16dp">

        <TextView
            android:id="@+id/vlocal_idLocal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/IDLocal"
            app:layout_constraintTop_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vlocal_disp_idLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintIDLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_idLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vlocal_nomLocal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/nomLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_disp_idLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vlocal_disp_nomLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintNomLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_nomLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vlocal_ubLocal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ubicacionLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_disp_nomLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vlocal_disp_ubLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintUbLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_ubLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vlocal_latitud"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/latLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_disp_ubLocal"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vlocal_disp_latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintLatLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_latitud"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vlocal_longitud"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lonLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_disp_latitud"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vlocal_disp_longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintLonLocal"
            app:layout_constraintTop_toBottomOf="@id/vlocal_longitud"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <ImageButton
            android:id="@+id/btnMap"
            android:onClick="redirectMaps"
            android:src="@drawable/ic_map"/>
    </TableLayout>

</ScrollView>