<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VerCicloActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:padding="16dp">

        <TextView
            android:id="@+id/vciclo_nomCiclo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/nomCiclo"
            app:layout_constraintTop_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vciclo_disp_nomCiclo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/hintNumCiclo"
            app:layout_constraintTop_toBottomOf="@id/vciclo_nomCiclo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vciclo_fechaDesde"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/fechaDesde"
            app:layout_constraintTop_toBottomOf="@id/vciclo_disp_nomCiclo"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vciclo_disp_fDesde"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/hintFechaIni"
            app:layout_constraintTop_toBottomOf="@id/vciclo_fechaDesde"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/vciclo_fHasta"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/fechaHasta"
            app:layout_constraintTop_toBottomOf="@id/vciclo_disp_fDesde"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/vciclo_disp_fHasta"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/hintFechaFin"
            app:layout_constraintTop_toBottomOf="@id/vciclo_fHasta"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </TableLayout>

</ScrollView>