<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevaEvaluacionActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:padding="16dp">
        <TextView
            android:id="@+id/evalTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_nueva_eval"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:paddingBottom="20dp"
            />
        <EditText
            android:id="@+id/edit_nombre_eval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_eval"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/evalTitulo"
            />
        <TextView
            android:id="@+id/tipoEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_eval"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/edit_nombre_eval"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingTop="20dp"
            />
        <Spinner
            android:id="@+id/edit_tipoEval"
            app:layout_constraintTop_toBottomOf="@+id/tipoEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            />
        <TextView
            android:id="@+id/fechaInicioEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaInicio_eval"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/edit_tipoEval"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingTop="20dp"
            />
        <DatePicker
            android:id="@+id/edit_fechInicio_eval"
            app:layout_constraintTop_toBottomOf="@+id/fechaInicioEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />
        <TextView
            android:id="@+id/fechaFinEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaFin_eval"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/edit_fechInicio_eval"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingTop="20dp"
            />
        <DatePicker
            android:id="@+id/edit_fechFin_eval"
            app:layout_constraintTop_toBottomOf="@+id/fechaFinEvalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />
        <EditText
            android:id="@+id/edit_descripcion_eval"
            app:layout_constraintTop_toBottomOf="@+id/edit_fechFin_eval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_eval"
            android:inputType="textMultiLine"
            />
        <EditText
            android:id="@+id/edit_entregaNotas_eval"
            app:layout_constraintTop_toBottomOf="@+id/edit_descripcion_eval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entregaNotas_eval"
            android:inputType="date"
            />
        <EditText
            android:id="@+id/edit_numParticipantes_eval"
            app:layout_constraintTop_toBottomOf="@+id/edit_entregaNotas_eval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/participantes_eval"
            android:inputType="number"
            />
    </TableLayout>
</ScrollView>